--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -148,3 +148,26 @@ height: 80px;
   margin-right: 10%;
   margin-left: 10%;
 }
+
+
+
+
+
+/* styles for 0 - 1280 */
+@media only screen and (max-width: 768px) {
+
+.tube {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  margin-top: 25px;
+}
+
+.tube-list {
+  display: block;
+  margin-top: 0;
+}
+
+
+
+}
