--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,7 +3,27 @@ body {
   margin: 0;
   background-color: white;
 }
+span {
+  height: 19px;
+  width: 19px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right:10px;
+}
+h1 {
+  font-size: 32px;
+}
+h2 {
+  font-size: 24px;
+  font-weight: 400;
+}
+h3 {
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
 
+/* styles for tube dots */
 .bakerloo {
   background-color: #B05F21;
 }
@@ -78,52 +98,34 @@ body {
 .button-wrapper {
   width: 200px;
   margin: 0 auto;
+  padding-bottom: 50px;
 }
 
-span {
-  height: 19px;
-  width: 19px;
-  border-radius: 50%;
-  display: inline-block;
-  margin-right:10px;
-}
-h1 {
-  font-size: 32px;
-}
-h2 {
-  font-size: 24px;
-  font-weight: 400;
-}
-h3 {
-  font-size: 18px;
-  margin-top: 10px;
-  margin-bottom: 0;
-}
-
+/* makes logo 90px */
 .logo {
   height: 90px;
 }
+
+/* centrally aligns logo */
 .logo-wrapper {
   width: 90px;
   margin: auto;
   padding-top: 50px;
 }
 
-.title {
-  text-align: center;
-}
-
+/* spacing for list of tubes */
 .tube-list {
   display: inline-block;
-  padding-left: 10%;
   padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 10%;
 }
 .tube-title {
   display: inline-block;
   margin-bottom: 0;
 }
 
-/* Create four equal columns that floats next to each other */
+/* Create 3 equal columns that floats next to each other */
 .tube {
   float: left;
   width: 33%;
@@ -143,5 +145,16 @@ h3 {
   .tube {
     width: 100%;
     padding-top: 25px;
+  }
+  .logo-wrapper {
+    padding-top: 25px;
+  }
+  .tube-list {
+    display: inline-block;
+    padding-top: 0;
+    padding-left: 10%;
+  }
+  .tube {
+    padding-bottom: 0;
   }
 }
