--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -70,6 +70,11 @@ h3 {
   background-color: #66CC00;
 }
 
+/* makes text colour red */
+.statusbad {
+  color: #0C2BFF;
+}
+
 /* styling for button */
 .button {
   height: 64px;
@@ -77,7 +82,7 @@ h3 {
   color: #fff;
   background: #0C2BFF;
   border-radius: 100px;
-  width: 200px;
+  width: 150px;
   cursor: pointer;
   border: 0;
   margin: 0 auto;
@@ -101,10 +106,12 @@ h3 {
 .button:focus {
   outline: 0;
 }
-.button-wrapper {
-  width: 200px;
-  margin: 0 auto;
-  padding-bottom: 50px;
+
+/* makes button sticky */
+.sticky-button {
+  position: fixed;
+  top: 50px;
+  right: 10%;
 }
 
 /* makes logo 90px */
@@ -115,8 +122,9 @@ h3 {
 /* centrally aligns logo */
 .logo-wrapper {
   width: 90px;
-  margin: auto;
-  padding-top: 50px;
+  padding-left: 10%;
+  margin: 0;
+  padding-top: 37px;
 }
 
 /* spacing for list */
@@ -154,9 +162,6 @@ h3 {
     width: 100%;
     padding-top: 25px;
   }
-  .logo-wrapper {
-    padding-top: 25px;
-  }
   .list {
     display: inline-block;
     padding-top: 0;
@@ -165,4 +170,9 @@ h3 {
   .tube {
     padding-bottom: 0;
   }
+}
+
+
+.statuswaterloobad {
+  color: red;
 }
