--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,6 +12,8 @@ span {
 }
 h1 {
   font-size: 100px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 h2 {
   font-size: 24px;
@@ -178,8 +180,10 @@ h3 {
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   h1 {
-      font-size: 56px;
-      margin-top: 25px;
+      font-size: 48px;
+      margin-top: 24px;
+      margin-bottom: 24px;
+
     }
     .tube-bakerloo {
       width: 100%;
