Classes reflect API naming

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -42,7 +42,7 @@ h3 {
 .elizabeth {
   background-color: #6950A1;
 }
-.hammersmith {
+.hammersmith-city {
   background-color: #F085A0;
 }
 .jubilee {
@@ -63,7 +63,7 @@ h3 {
 .victoria {
   background-color: #379DDC;
 }
-.waterloo {
+.waterloo-city {
   background-color: #84CDBC;
 }
 .dlr {
