--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,6 +13,16 @@ span {
   margin-right:10px;
 }
 
+/* style for links */
+a {
+  color: #0C2BFF;
+  text-decoration: none;
+
+}
+a:hover {
+border-bottom: 2px solid #0C2BFF;
+}
+
 /* font sizes */
 h1 {
   font-size: 100px;
@@ -21,6 +31,7 @@ h1 {
 }
 h2 {
   font-size: 24px;
+  line-height: 38px;
   font-weight: 400;
   margin-top: 24px;
 }
